fix: измененить z-index

--- a/src/blocks/popup/__conteiner/popup__conteiner.css
+++ b/src/blocks/popup/__conteiner/popup__conteiner.css
@@ -8,7 +8,6 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     box-sizing: border-box;
-    z-index: 2;
 }
 
 @media screen and (max-width:520px) {
