--- a/src/blocks/profile/profile__avatar-btn/profile__avatar-btn.css
+++ b/src/blocks/profile/profile__avatar-btn/profile__avatar-btn.css
@@ -7,7 +7,6 @@
     padding: none;
     border: 0;
     cursor: pointer;
-    z-index: 1;
     opacity: 0;
     
     background: url(../../../images/profile-edit.svg) transparent center no-repeat;
